# quri-parts-oqtopus

./: Makefile  README.md  mkdocs.yml  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yaml  release.yaml
docs/: CONTRIBUTING.md  index.md
docs/developer_guidelines/: setup.md
docs/usage/: getting_started.ipynb
examples/: download_log.py  get_devices.py  get_job.py  submit_job_estimation.py  submit_job_estimation_qasm.py  submit_job_estimation_transpiler_info.py  submit_job_multi_manual.py  submit_job_multi_manual_qasm.py  submit_job_multi_manual_transpiler_info.py  submit_job_sampling.py  submit_job_sampling_device_info.py  submit_job_sampling_mitigation_info.py  submit_job_sampling_qasm.py  submit_job_sampling_transpiler_info.py  submit_job_sse.py  submit_job_sse_estimation.py  submit_job_sse_sampling.py  user_program.py  user_program_sampling.py
spec/: Makefile
src/quri_parts_oqtopus/: sampler.py
src/quri_parts_oqtopus/backend/: __init__.py  base.py  config.py  configuration.py  device.py  estimation.py  job_backend_base.py  model_base.py  sampling.py  sse.py  storage.py
src/quri_parts_oqtopus/backend/data/: estimation.py  job_base.py  sampling.py
src/quri_parts_oqtopus/backend/devices/: device.py
src/quri_parts_oqtopus/backend/jobs/: base.py  estimation.py  sampling.py  sse.py
src/quri_parts_oqtopus/models/: base.py
src/quri_parts_oqtopus/models/devices/: device.py
src/quri_parts_oqtopus/models/jobs/: base.py  estimation.py  sampling.py  sse.py
src/quri_parts_oqtopus/models/jobs/results/: estimation.py  sampling.py
src/quri_parts_oqtopus/rest/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
src/quri_parts_oqtopus/rest/api/: __init__.py  announcements_api.py  api_token_api.py  device_api.py  job_api.py  settings_api.py  users_api.py
src/quri_parts_oqtopus/rest/models/: __init__.py  all_ofjobs_job_info_combined_program.py  all_ofjobs_job_info_input.py  all_ofjobs_job_info_result.py  all_ofjobs_job_info_sse_log.py  all_ofjobs_job_info_transpile_result.py  announcements_get_announcement_response.py  announcements_get_announcements_list_response.py  api_token_api_token.py  api_token_api_token_status.py  devices_device_info.py  error_bad_request.py  error_forbidden_error.py  error_internal_server_error.py  error_not_found_error.py  error_unauthorized_error.py  get_job200_response.py  inline_response200.py  jobs_estimation_result.py  jobs_get_job_response.py  jobs_get_job_status_response.py  jobs_get_jobs_response.py  jobs_get_sselog_response.py  jobs_job.py  jobs_job_base.py  jobs_job_def.py  jobs_job_info.py  jobs_job_info_download_presigned_url.py  jobs_job_info_upload_presigned_url.py  jobs_job_info_upload_presigned_url_fields.py  jobs_job_result.py  jobs_job_status.py  jobs_job_type.py  jobs_operator_item.py  jobs_register_job_response.py  jobs_registered_job.py  jobs_s3_estimation_result.py  jobs_s3_job_result.py  jobs_s3_operator_item.py  jobs_s3_sampling_result.py  (+14 more)
tests/quri_parts_oqtopus/backend/: test_sampling.py  test_sse.py  test_storage.py
